# -DocBridgeAI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
demo/: demo_autopay_policy.docx  demo_autopay_policy.md  demo_interactions.csv  demo_interactions.xlsx  sample.md
src/glossary/: financial.json
src/pipeline/: cleaner.py  detector.py  exporter.py  extractors.py  models.py  pipeline.py  report.py  validator.py
tests/: test_pipeline.py
tests/fixtures/: agent_interactions.csv  policy_readable.md
