[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docbridgeai"
version = "0.1.0"
description = "Standalone document normalization pipeline for enterprise AI systems"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.13",
    "pillow>=10.0.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "langdetect>=1.0.9",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
